--- a/WebShopREST/WebContent/css/restaurant.css
+++ b/WebShopREST/WebContent/css/restaurant.css
@@ -76,3 +76,65 @@
 .hovered {
     margin-top: -1%;
 }
+
+.usernameComment {
+    color: #3b535f;
+    font-size: large;
+    font-weight: 600
+}
+.markComment{
+    color: #f1a952;
+    font-size: large;
+    font-weight: bold;
+}
+.dateComment {
+    color: #3b535f;
+    font-size: medium;
+    font-weight: 600
+}
+.commentContent {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.contentComment {
+    text-align: justify;
+}
+
+.informationContent {
+    margin-left: 70px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+.informationTextBig {
+    font-size: larger;
+    font-weight: 600;
+}
+.informationTextMark {
+    font-size: larger;
+    font-weight: 600;
+    color: #f1a952;
+}
+.informationContentAddress {
+    margin-left: 130px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: #3B535F;
+    font-size: medium;
+}
+
+.itemQuantity {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.addRemoveItem {
+    font-size: x-large;
+    width: 45px;
+    height: 45px;
+}
+.product-price-dialog {
+    color: #C75D4F;
+}
+.product-quantity {
+    color: #3B535F;
+    font-size: larger;
+}
