--- a/WebShopREST/WebContent/css/restaurant.css
+++ b/WebShopREST/WebContent/css/restaurant.css
@@ -19,6 +19,10 @@
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
 }
+.my-profile {
+    -webkit-filter: drop-shadow(3px 3px 3px rgb(71, 71, 71));
+    filter: drop-shadow(3px 3px 3px rgb(68, 68, 68));
+}
 
 .restaurant-name {
     text-shadow: 1px 1px 5px #222;
@@ -137,4 +141,13 @@
 .product-quantity {
     color: #3B535F;
     font-size: larger;
+}
+
+.btn-primary {
+    background-color: #80B0CF;
+    border-color: #80B0CF;
+}
+.btn-primary:hover {
+    background-color: #638aa3;
+    border-color: #638aa3;
 }
