--- a/WebShopREST/WebContent/css/managerHomepage.css
+++ b/WebShopREST/WebContent/css/managerHomepage.css
@@ -44,3 +44,9 @@
 .nav-item a {
     color: #80B0CF;
 }
+
+.newProductButton{
+    margin-left: auto; 
+    margin-right: 12%;
+    margin-bottom: 2vh;
+}
