--- a/WebShopREST/WebContent/css/employeeModal.css
+++ b/WebShopREST/WebContent/css/employeeModal.css
@@ -15,7 +15,7 @@
   vertical-align: middle;
 }
 
-.modal-container {
+.modal-container1 {
   width: 300px;
   margin: 0px auto;
   padding: 20px 30px;
@@ -31,7 +31,7 @@
   color: #42b983;
 }
 
-.modal-body {
+.modal-body1 {
   margin: 20px 0;
 }
 
