--- a/WebShopREST/WebContent/css/homepage.css
+++ b/WebShopREST/WebContent/css/homepage.css
@@ -48,7 +48,6 @@
 .main_body{
     margin-left: 12%;
     margin-right: 12%;
-    margin-top: 2%;
 }
 
 .main_content{
@@ -62,6 +61,7 @@
 .flex{
     width: 100%;
 }
+
 
 
 
@@ -111,6 +111,32 @@
 	line-height: 22px;
 	font-weight: 200;
 }
+
+.btn-filter {
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: left !important;
+}
+.btn-filter, .btn-search {
+    background-color: #3b535f;
+    border-color: #3b535f;
+    color: white;
+}
+.btn-filter:hover, .btn-search:hover {
+    background-color: #597381;
+    border-color: #597381;
+    color: white;
+}
+
+.checkbox-style {
+    background-color: #3b535f;
+    color: white;
+    height: 40px;
+    border-color: #3b535f;
+    padding-top: 7px;
+}
+
+
 
 
 
