--- a/WebShopREST/WebContent/css/managerHomepage.css
+++ b/WebShopREST/WebContent/css/managerHomepage.css
@@ -173,4 +173,9 @@ input[type="file"] {
     padding: 15px;
 }
 
+.markComment{
+    color: #f1a952;
+    font-size: large;
+    font-weight: bold;
+}
 
